--- a/src/styles/partials/_FormContainer.scss
+++ b/src/styles/partials/_FormContainer.scss
@@ -2,4 +2,8 @@
   display: flex;
   width: 100%;
   margin-bottom: 4rem;
+
+  @include respond(phone) {
+    flex-direction: column;
+  }
 }
