--- a/src/styles/partials/_Pattern.scss
+++ b/src/styles/partials/_Pattern.scss
@@ -19,6 +19,10 @@
     font-family: 'Lato', sans-serif;
     color: $color-black;
 
+    @include respond(phone) {
+      margin-bottom: 2rem;
+    }
+
     &:active,
     &:focus {
       outline: none;
